--- a/aframe-logo-model.html.html
+++ b/aframe-logo-model.html.html
@@ -27,7 +27,7 @@
 		<a-entity ply-model="src: #assetAframe" rotation='-90 0 0'scale='0.02 0.02 0.02'></a-entity>
 
 		<!-- <a-marker-camera preset='hiro'></a-marker-camera> -->
-		<a-marker-camera preset='custom' url='models/marker/ar.patt'></a-marker-camera>
+		<a-marker-camera preset='custom' url='models/marker/pattern-QLab1-MK3.patt'></a-marker-camera>
 	</a-scene>
 </body>
 </html>
