--- a/aframe-logo-model.html.html
+++ b/aframe-logo-model.html.html
@@ -19,15 +19,15 @@
 	<!-- <a-scene arjs='sourceType: image; sourceUrl:../../data/images/screenshot.png'> -->
 	<!-- <a-scene embedded arjs='sourceType: image; sourceUrl:../../data/images/armchair.jpg;'> -->
 
-		<!--<a-assets>
+		<<a-assets>
 			<a-asset-item id="assetAframe" src="models/ply/aframe.ply"></a-asset-item>
 		</a-assets>
 
-		<!-- <a-marker type='unknown'> 
-		<a-entity ply-model="src: #assetAframe" rotation='-90 0 0'scale='0.02 0.02 0.02'></a-entity>-->
+		<!-- <a-marker type='unknown'> -->
+		<a-entity ply-model="src: #assetAframe" rotation='-90 0 0'scale='0.02 0.02 0.02'></a-entity>
 
 		<!-- <a-marker-camera preset='hiro'></a-marker-camera> -->
-		<a-marker-camera preset='custom' url='models/marker/pattern-QLab1-MK3.patt'><a-box position='0 0.5 0' color="grey"></a-box></a-marker-camera>
+		<a-marker-camera preset='custom' url='models/marker/pattern-QLab1-MK3.patt'></a-box></a-marker-camera>
 	</a-scene>
 </body>
 </html>
