--- a/aframe-logo-model.html.html
+++ b/aframe-logo-model.html.html
@@ -20,11 +20,11 @@
 	<!-- <a-scene embedded arjs='sourceType: image; sourceUrl:../../data/images/armchair.jpg;'> -->
 
 		<<a-assets>
-			<a-asset-item id="assetAframe" src="models/ply/aframe.ply"></a-asset-item>
+			<a-asset-item id="Ship" src="models/ply/Intergalactic_Spaceship-(Ply).ply"></a-asset-item>
 		</a-assets>
 
 		<!-- <a-marker type='unknown'> -->
-		<a-entity ply-model="src: #assetAframe" rotation='-90 0 0'scale='0.02 0.02 0.02'></a-entity>
+		<a-entity ply-model="src: #Ship" rotation='-90 0 0'scale='0.02 0.02 0.02'></a-entity>
 
 		<!-- <a-marker-camera preset='hiro'></a-marker-camera> -->
 		<a-marker-camera preset='custom' url='models/marker/pattern-QLab1-MK3.patt'></a-box></a-marker-camera>
