--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<!-- <a-marker preset="hiro"> -->
   	<a-marker-camera preset='custom' url='models/marker/pattern-QLab1-MK3.patt'>
 
-            <a-box position='0 0.5 0' material='color: black;'></a-box>
+            <a-box position='0 0.5 0' material='color: blue;'></a-box>
   	<!-- </a-marker> -->
   	</a-marker-camera>
   	<a-entity camera></a-entity>
